--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/forms": "^0.3.4",
+    "@tailwindcss/forms": "^0.4.0",
     "autoprefixer": "^10.4.2",
     "clsx": "^1.1.1",
     "next": "12",
@@ -22,12 +22,15 @@
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.3.1",
+    "@tailwindcss/typography": "^0.5.0",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.3",
     "husky": "^7.0.4",
     "lint-staged": "^11.2.6",
     "prettier": "^2.5.1",
-    "tailwindcss": "^2.2.19"
+    "tailwindcss": "^3.0.15"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
