--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,10 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+# local env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
